--- a/doctores/index.html
+++ b/doctores/index.html
@@ -116,6 +116,10 @@
             </div>
         </div>
     </div>
+    <footer>
+        <p class="pfoo">Copyright Iván Martínez Tutor</p>
+    </footer>
+    <script src="scripts/jquery.validate.js"></script>
     <script src="scripts/jquery.modal.js" type="text/javascript"></script>
     <script src="scripts/main.js"></script>
     <script src="scripts/jquery.dataTables.js"></script>
@@ -123,6 +127,8 @@
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js" type="text/javascript"></script>-->
     <script src="scripts/jquery.growl.js" type="text/javascript"></script>
     <link href="styles/jquery.growl.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="scripts/additional-methods.js"></script>
+
 </body>
 
 </html>
