--- a/doctores/index.html
+++ b/doctores/index.html
@@ -124,11 +124,10 @@
     <script src="scripts/main.js"></script>
     <script src="scripts/jquery.dataTables.js"></script>
     <script src="scripts/dataTables.bootstrap.js"></script>
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js" type="text/javascript"></script>-->
     <script src="scripts/jquery.growl.js" type="text/javascript"></script>
     <link href="styles/jquery.growl.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="scripts/additional-methods.js"></script>
-
+    <script src="scripts/messages_es.min.js" type="text/javascript"></script>
+    <script src="scripts/additional-methods.min.js" type="text/javascript"></script>
 </body>
 
 </html>
